tests/analyzer/ok/func.api



type func1 = fn()void;
type func2 = fn()void; // test caching path

type func3 = fn(a:u32, b:u32, c:u32, d: u32)void;
type func4 = fn(a:u32, b:u32, c:u32, d: u32)void; // test caching path


type func5 = fn(a:u32, b:u32, c:u32, d: u32) ?[*:0]const u8 ;
type func6 = fn(a:u32, b:u32, c:u32, d: u32) ?[*:0]const u8 ; // test caching path

