tests/analyzer/fail/duplicate-parameter.api
// expected: 1002, 1002

type any = fn(a: u32, a: u32, b: u32, b: u32) void;
